Fix popups flickering in MS Edge

--- a/web/src/css/app.styl
+++ b/web/src/css/app.styl
@@ -1,7 +1,7 @@
 // app global css
 
 // prevent the pull to refresh on Android Chrome
-body:not(.platform-ios)
+body.mobile.touch:not(.platform-ios)
     width 100%
     height 100%
     position absolute
